# untext

./: .dockerignore  .gitignore  .gitmodules  Makefile  Makefile.win  README.md  build_requirements.txt  contributing.md  cython-compile.list  dom.py  main.css  main.py  packaging.mk  pyproject.toml  pypy.md
css/: style.css  syntax.css
docker/: Dockerfile  Dockerfile.slim  Makefile  components.mk  packaging.mk  wheel.mk
docs/: dev.md  install.md
docs/dev/: pypy.md
import_tests/: README.md
import_tests/patch_pkg/: patch.py
import_tests/pkg1/: absolute.py  import_pkg.py  ns_import.py
makefiles/: packaging.mk
rendering/: dom.py  expression.py  statement.py
src/: main.py  pyinstall_main.py
src/untext/: __main__.py  main.py
src/untext/css/: style.css  syntax.css
src/untext/rendering/: expression.py  statement.py
src/untext/rendering/static/: expression.py  html.py  statement.py
